# NagusaBot-reformed

./: .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
src/plugins/: Eat.py  RPluckyKing.py  Replies.json  TBA-utils.py  baoTestRep.py  jmS.py  naole.py  pokedReact.py  welcome.json  welcome.py
src/plugins/NewReact/: __init__.py  config.py  llmCensor.py  llmResp.py
src/plugins/NewReact/assets/: yuluGenerate.js
src/plugins/React-emoji/: __init__.py  config.py
src/plugins/RecallAd/: __init__.py  config.py
src/plugins/RecallAd/assets/: revoke_records.json
src/plugins/Utils/: jm.py  option.yml
src/plugins/autoGroupAcception/: __init__.py  config.py
src/plugins/autoGroupAcception/assets/: extract.py  replacement.json
src/plugins/bilibiliRepost/: __init__.py  config.py
src/plugins/birthday/: __init__.py  config.py
src/plugins/help/: __init__.py  getGroupConfig.py
src/plugins/help/assets/: config.json
src/plugins/jm/: __init__.py  config.py  jmdownload.py
src/plugins/llmPlugin/: __init__.py  config.py  llmResp.py  yulu.json
src/plugins/react/: __init__.py  config.py
src/plugins/reactTestLab/: __init__.py  config.py
src/plugins/reactv2/: __init__.py  config.py
src/plugins/welcome/: __init__.py  config.py
