[project]
name = "NagusaBot-test"
version = "0.1.0"
description = "NagusaBot-test"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}
]
plugins = ["nonebot_plugin_apscheduler","src.plugins.birthday", "src.plugins.jm", "src.plugins.NewReact", "src.plugins.welcome","src.plugins.help","src.plugins.autoGroupAcception","src.plugins.RecallAd","src.plugins.React-emoji"]
plugin_dirs = []
builtin_plugins = ["echo"]
